// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSeverity component tests badge - basic 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#44e858",
            "borderColor": "transparent",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": "auto",
            "justifyContent": "center",
            "paddingHorizontal": 14,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 16,
            "fontWeight": 600,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
        testID="Button_Text"
      >
        Button
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          {
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": [
              {
                "translateX": "50%",
              },
              {
                "translateY": "-50%",
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#f47f77",
            },
            {
              "borderRadius": 100,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 8,
            },
          ]
        }
        testID="Badge"
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "color": "#2b2e33",
                "fontFamily": "TT Fellows",
                "fontSize": 12,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              },
              {
                "minWidth": undefined,
              },
            ]
          }
        >
          Badge
        </Text>
      </View>
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
        style={
          {
            "flexDirection": "row",
            "height": 0,
            "position": "absolute",
            "width": 750,
          }
        }
      >
        <View
          collapsable={false}
        >
          <Text
            numberOfLines={1}
            onLayout={[Function]}
            style={
              {
                "color": "#2b2e33",
                "fontFamily": "TT Fellows",
                "fontSize": 12,
                "includeFontPadding": false,
                "verticalAlign": "middle",
              }
            }
          >
            Badge
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ButtonSeverity component tests badge - dot 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#44e858",
            "borderColor": "transparent",
            "borderRadius": 14,
            "borderWidth": 1,
            "flexDirection": "row",
            "gap": 8,
            "height": "auto",
            "justifyContent": "center",
            "paddingHorizontal": 14,
            "paddingVertical": 8,
          },
          false,
        ]
      }
    >
      <Text
        style={
          {
            "color": "#2b2e33",
            "fontFamily": "TT Fellows",
            "fontSize": 16,
            "fontWeight": 600,
            "includeFontPadding": false,
            "verticalAlign": "middle",
          }
        }
        testID="Button_Text"
      >
        Button
      </Text>
    </View>
    <View
      style={
        [
          {
            "alignItems": "flex-start",
          },
          {
            "position": "absolute",
            "right": -0.5,
            "top": 0,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "backgroundColor": "#77baf4",
            },
            {
              "borderRadius": 100,
              "height": 8,
              "width": 8,
            },
          ]
        }
        testID="Badge"
      />
    </View>
  </View>
</View>
`;
